--- a/packages/storybook-html/src/components/footer/footer.html
+++ b/packages/storybook-html/src/components/footer/footer.html
@@ -5,8 +5,8 @@
             UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. — <a href="" class="uq-footer__acknowledgement-statement__link">Reconciliation statement</a>
         </div>
   
-        <div class="uq-footer__flex-container">
-            <div class="uq-footer__flex-item">
+        <div class="uq-footer__row">
+            <div class="uq-footer__column">
                 <div class="uq-footer__copyright">© The University of Queensland</div>
                 <div class="uq-footer__contact">
                     Enquiries: <a href="tel:+61733651111" class="uq-footer__link footer__enquiries-phone" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Enquiries phone'});"><span itemprop="telephone">+61 7 3365 1111</span></a>                    &nbsp; | &nbsp; <a href="https://uq.edu.au/contacts" class="uq-footer__link footer__contacts-link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Contact directory'});">Contact directory</a>
@@ -16,7 +16,7 @@
                     <abbr title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr> Provider No: <a class="uq-footer__link cricos__link" href="https://www.uq.edu.au/about/cricos-link" rel="external" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'CRICOS'});">00025B</a>
                 </div>
             </div>
-            <div class="uq-footer__flex-item">
+            <div class="uq-footer__column">
                 <div class="uq-footer__emergency-contact uq-footer__aside">
                         <strong class="uq-footer__sub-title">Emergency</strong><br> Phone: <a href="tel:+61733653333" class="uq-footer__link footer__emergency-phone" onclick="gtag('event', 'click',
                     {'event_category': 'UQ Footer', 'event_label': 'Emergency phone'});">3365 3333</a>
@@ -25,8 +25,8 @@
         </div>
       
         <div class="uq-footer__footer">
-            <div class="uq-footer__flex-container">
-                <div class="uq-footer__flex-item">
+            <div class="uq-footer__row">
+                <div class="uq-footer__column">
                     <div class="uq-footer__footer-menu">
                         <ul class="uq-footer__footer-menu__list">
                             <li class="uq-footer__footer-menu__item">
@@ -44,7 +44,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="uq-footer__flex-item">
+                <div class="uq-footer__column">
                     <a href="" class="uq-footer__login-link uq-footer__aside" rel="nofollow">Login</a>
                 </div>
             </div>
