core, storybook-html: tidy up core stories and add Montserrat (Google)

--- a/packages/core/src/scss/_global.scss
+++ b/packages/core/src/scss/_global.scss
@@ -13,6 +13,7 @@
 
 $roboto:  'Roboto', "Helvetica Neue", Helvetica, Arial, sans-serif;
 $merriweather:  'Merriweather', Georgia, serif;
+$montserrat: 'Montserrat', sans-serif;
 $courier: "Courier New", "DejaVu Sans Mono", monospace, sans-serif;
 
 // Now create some variables using the font stacks we want on this site.
