--- a/packages/storybook-html/src/components/core/colours.html
+++ b/packages/storybook-html/src/components/core/colours.html
@@ -1,93 +1,25 @@
-<ul class="story-color-swatch-list">
-  <li class="story-color-swatch-list__item">
-    <div class="story-color-swatch story-color-swatch--uq-purple"></div>
+<ul class="uidf-color-swatch-list">
+  <li class="uidf-color-swatch-list__item">
+    <div class="uidf-color-swatch uidf-color-swatch--uq-purple"></div>
   </li>
-  <li class="story-color-swatch-list__item">
-    <div class="story-color-swatch story-color-swatch--uq-black"></div>
+  <li class="uidf-color-swatch-list__item">
+    <div class="uidf-color-swatch uidf-color-swatch--uq-black"></div>
   </li>
-  <li class="story-color-swatch-list__item">
-    <div class="story-color-swatch story-color-swatch--uq-white"></div>
+  <li class="uidf-color-swatch-list__item">
+    <div class="uidf-color-swatch uidf-color-swatch--uq-white"></div>
   </li>
-  <li class="story-color-swatch-list__item">
-    <div class="story-color-swatch story-color-swatch--uq-green"></div>
+  <li class="uidf-color-swatch-list__item">
+    <div class="uidf-color-swatch uidf-color-swatch--uq-green"></div>
   </li>
-  <li class="story-color-swatch-list__item">
-    <div class="story-color-swatch story-color-swatch--uq-gold"></div>
-  </li>
-</ul>
-<ul class="story-color-swatch-list">
-  <li class="story-color-swatch-list__item">
-    <div class="story-color-swatch story-color-swatch--link-color"></div>
-  </li>
-  <li class="story-color-swatch-list__item">
-    <div class="story-color-swatch story-color-swatch--link-active-color"></div>
-  </li>
-  <li class="story-color-swatch-list__item">
-    <div class="story-color-swatch story-color-swatch--external-link-icon-color"></div>
+  <li class="uidf-color-swatch-list__item">
+    <div class="uidf-color-swatch uidf-color-swatch--uq-gold"></div>
   </li>
 </ul>
-<ul class="story-color-swatch-list">
-  <li class="story-color-swatch-list__item">
-    <div class="story-color-swatch story-color-swatch--vertical-list-border"></div>
+<ul class="uidf-color-swatch-list">
+  <li class="uidf-color-swatch-list__item">
+    <div class="uidf-color-swatch uidf-color-swatch--link-color"></div>
   </li>
-</ul>
-<ul class="story-color-swatch-list">
-  <li class="story-color-swatch-list__item">
-    <div class="story-color-swatch story-color-swatch--messages-status-bg"></div>
-  </li>
-  <li class="story-color-swatch-list__item">
-    <div class="story-color-swatch story-color-swatch--messages-status-border-color"></div>
-  </li>
-  <li class="story-color-swatch-list__item">
-    <div class="story-color-swatch story-color-swatch--messages-status-color"></div>
-  </li>
-  <li class="story-color-swatch-list__item">
-    <div class="story-color-swatch story-color-swatch--messages-warning-bg"></div>
-  </li>
-  <li class="story-color-swatch-list__item">
-    <div class="story-color-swatch story-color-swatch--messages-warning-border-color"></div>
-  </li>
-  <li class="story-color-swatch-list__item">
-    <div class="story-color-swatch story-color-swatch--messages-warning-color"></div>
-  </li>
-  <li class="story-color-swatch-list__item">
-    <div class="story-color-swatch story-color-swatch--messages-error-bg"></div>
-  </li>
-  <li class="story-color-swatch-list__item">
-    <div class="story-color-swatch story-color-swatch--messages-error-border-color"></div>
-  </li>
-  <li class="story-color-swatch-list__item">
-    <div class="story-color-swatch story-color-swatch--messages-error-color"></div>
-  </li>
-  <li class="story-color-swatch-list__item">
-    <div class="story-color-swatch story-color-swatch--messages-error-link-color"></div>
-  </li>
-</ul>
-<ul class="story-color-swatch-list">
-  <li class="story-color-swatch-list__item">
-    <div class="story-color-swatch story-color-swatch--progression-text"></div>
-  </li>
-  <li class="story-color-swatch-list__item">
-    <div class="story-color-swatch story-color-swatch--progression-border"></div>
-  </li>
-  <li class="story-color-swatch-list__item">
-    <div class="story-color-swatch story-color-swatch--progression-label"></div>
-  </li>
-  <li class="story-color-swatch-list__item">
-    <div class="story-color-swatch story-color-swatch--progression-step-bg"></div>
-  </li>
-  <li class="story-color-swatch-list__item">
-    <div class="story-color-swatch story-color-swatch--progression-bar-bg"></div>
-  </li>
-  <li class="story-color-swatch-list__item">
-    <div class="story-color-swatch story-color-swatch--progression-completed"></div>
-  </li>
-</ul>
-<ul class="story-color-swatch-list">
-  <li class="story-color-swatch-list__item">
-    <div class="story-color-swatch story-color-swatch--content-column-block-pane-bg"></div>
-  </li>
-  <li class="story-color-swatch-list__item">
-    <div class="story-color-swatch story-color-swatch--content-column-block-pane-odd-bg"></div>
+  <li class="uidf-color-swatch-list__item">
+    <div class="uidf-color-swatch uidf-color-swatch--link-active-color"></div>
   </li>
 </ul>
