--- a/packages/storybook-html/src/components/core/core.scss
+++ b/packages/storybook-html/src/components/core/core.scss
@@ -1,2 +1,109 @@
-@import "colours";
-@import "icons";
+@use '@uq-uidf/core/src/scss/global' as core;
+@use '@uq-uidf/foundation-global/src/scss/global' as fnd-global;
+
+.uidf-fonts {
+  font-size: 2rem;
+  line-height: 1.5;
+}
+
+.uidf-font {
+  &--roboto {
+    font-family: core.$roboto;
+  }
+
+  &--merriweather {
+    font-family: core.$merriweather;
+  }
+  &--montserrat {
+    font-family: core.$montserrat;
+  }
+
+  &--italic {
+    font-style: italic;
+  }
+
+  &--500 {
+    font-weight: 500;
+  }
+}
+
+.uidf-color-swatch-list {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  list-style: none;
+  margin: 30px;
+  padding: 0;
+
+  &__item {
+    flex-basis: #{(100 / 2) + "%"};
+    @media #{fnd-global.$medium-up} {
+      flex-basis: #{(100 / 6) + "%"};
+    }
+    @media #{fnd-global.$large-up} {
+      flex-basis: #{(100 / 8) + "%"};
+    }
+  }
+}
+
+.uidf-color-swatch {
+  padding: 50%; // square ratio
+  width: 100%;
+  position: relative;
+  &:after {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    display: block;
+    padding: 20px;
+    line-height: 1.3;
+    width: 100%;
+    text-align: center;
+    font-size: 0.75rem;
+    color: white;
+  }
+  &--uq-purple {
+    background-color: core.$uq-purple;
+    &:after {
+      content: '$uq-purple';
+    }
+  }
+  &--uq-black {
+    background-color: core.$uq-black;
+    &:after {
+      content: '$uq-black';
+    }
+  }
+  &--uq-white {
+    background-color: core.$uq-white;
+    &:after {
+      color: black;
+      content: '$uq-white';
+    }
+  }
+  &--uq-green {
+    background-color: core.$uq-green;
+    &:after {
+      content: '$uq-green';
+    }
+  }
+  &--uq-gold {
+    background-color: core.$uq-gold;
+    &:after {
+      content: '$uq-gold';
+    }
+  }
+  &--link-color {
+    background-color: core.$link-color;
+    &:after {
+      content: '$link-color';
+    }
+  }
+  &--link-active-color {
+    background-color: core.$link-active-color;
+    &:after {
+      content: '$link-active-color';
+    }
+  }
+}
