--- a/packages/storybook-html/src/components/progression/progression.html
+++ b/packages/storybook-html/src/components/progression/progression.html
@@ -1,41 +1,42 @@
-<ul class="progression">
-    <li class="progression__step is-complete">
-        <div class="progression__step-marker">
-            <a class="progression__link" href="/"><span class="progression__step-number">1</span> <span class="progression__step-label">Section 1</span></a>
-        </div>
-        <div class="progression__bar">&nbsp;</div>
-    </li>
-    <li class="progression__step">
-        <div class="progression__step-marker">
-            <a class="progression__link" href="/"><span class="progression__step-number">2</span> <span class="progression__step-label">Section 2</span></a>
-        </div>
-        <div class="progression__bar">
-            <ul class="progression__sub-step">
-                <li class="progression__bar">&nbsp;</li>
-                <li class="progression__bar">&nbsp;</li>
-                <li class="progression__bar">&nbsp;</li>
-            </ul>
-        </div>
-    </li>
-    <li class="progression__step">
-        <div class="progression__step-marker">
-            <a class="progression__link" href="/"><span class="progression__step-number">3</span> <span class="progression__step-label">Section 3</span></a>
-        </div>
-        <div class="progression__bar">
-            <ul class="progression__sub-step">
-                <li class="progression__bar">&nbsp;</li>
-                <li class="progression__bar">&nbsp;</li>
-                <li class="progression__bar">&nbsp;</li>
-                <li class="progression__bar">&nbsp;</li>
-                <li class="progression__bar">&nbsp;</li>
-                <li class="progression__bar">&nbsp;</li>
-            </ul>
-        </div>
-    </li>
-    <li class="progression__step">
-        <div class="progression__step-marker">
-            <a class="progression__link" href="/"><span class="progression__step-number">4</span> <span class="progression__step-label">Section 4</span></a>
-            <a class="progression__link" href="#"><span class="progression__step-label"></span></a>
-        </div>
-    </li>
-</ul>
+<div class="uidf-progression-wrapper">
+    <ul class="progression">
+        <li class="progression__step">
+            <div class="progression__step-marker">
+                <a class="progression__link" href="#"><span class="progression__step-number">1</span> <span class="progression__step-label">Section 1</span></a>
+            </div>
+            <div class="progression__bar">&nbsp;</div>
+        </li>
+        <li class="progression__step">
+            <div class="progression__step-marker">
+                <a class="progression__link" href="#"><span class="progression__step-number">2</span> <span class="progression__step-label">Section 2</span></a>
+            </div>
+            <div class="progression__bar">
+                <ul class="progression__sub-step">
+                    <li class="progression__bar">&nbsp;</li>
+                    <li class="progression__bar">&nbsp;</li>
+                    <li class="progression__bar">&nbsp;</li>
+                </ul>
+            </div>
+        </li>
+        <li class="progression__step">
+            <div class="progression__step-marker">
+                <a class="progression__link" href="#"><span class="progression__step-number">3</span> <span class="progression__step-label">Section 3</span></a>
+            </div>
+            <div class="progression__bar">
+                <ul class="progression__sub-step">
+                    <li class="progression__bar">&nbsp;</li>
+                    <li class="progression__bar">&nbsp;</li>
+                    <li class="progression__bar">&nbsp;</li>
+                    <li class="progression__bar">&nbsp;</li>
+                    <li class="progression__bar">&nbsp;</li>
+                    <li class="progression__bar">&nbsp;</li>
+                </ul>
+            </div>
+        </li>
+        <li class="progression__step">
+            <div class="progression__step-marker">
+                <a class="progression__link" href="#"><span class="progression__step-number">4</span> <span class="progression__step-label">Section 4</span></a>
+            </div>
+        </li>
+    </ul>
+</div>
