--- a/packages/storybook-html/src/components/progression/progression.html
+++ b/packages/storybook-html/src/components/progression/progression.html
@@ -2,13 +2,19 @@
     <ul class="progression">
         <li class="progression__step">
             <div class="progression__step-marker">
-                <a class="progression__link" href="#"><span class="progression__step-number">1</span> <span class="progression__step-label">Section 1</span></a>
+                <a class="progression__link" href="#">
+                    <span class="progression__step-number">1</span>
+                    <span class="progression__step-label">Step 1</span>
+                </a>
             </div>
             <div class="progression__bar">&nbsp;</div>
         </li>
         <li class="progression__step">
             <div class="progression__step-marker">
-                <a class="progression__link" href="#"><span class="progression__step-number">2</span> <span class="progression__step-label">Section 2</span></a>
+                <a class="progression__link" href="#">
+                    <span class="progression__step-number">2</span>
+                    <span class="progression__step-label">Step 2</span>
+                </a>
             </div>
             <div class="progression__bar">
                 <ul class="progression__sub-step">
@@ -20,7 +26,10 @@
         </li>
         <li class="progression__step">
             <div class="progression__step-marker">
-                <a class="progression__link" href="#"><span class="progression__step-number">3</span> <span class="progression__step-label">Section 3</span></a>
+                <a class="progression__link" href="#">
+                    <span class="progression__step-number">3</span>
+                    <span class="progression__step-label">Step 3</span>
+                </a>
             </div>
             <div class="progression__bar">
                 <ul class="progression__sub-step">
@@ -35,7 +44,10 @@
         </li>
         <li class="progression__step">
             <div class="progression__step-marker">
-                <a class="progression__link" href="#"><span class="progression__step-number">4</span> <span class="progression__step-label">Section 4</span></a>
+                <a class="progression__link" href="#">
+                    <span class="progression__step-number">4</span>
+                    <span class="progression__step-label">Step 4</span>
+                </a>
             </div>
         </li>
     </ul>
