--- a/packages/storybook-html/src/components/core/core.scss
+++ b/packages/storybook-html/src/components/core/core.scss
@@ -3,6 +3,7 @@
 
 .uidf-fonts {
   font-size: 2rem;
+  font-weight: 400;
   line-height: 1.5;
 }
 
@@ -20,6 +21,10 @@
 
   &--italic {
     font-style: italic;
+  }
+
+  &--300 {
+    font-weight: 300;
   }
 
   &--500 {
