--- a/packages/storybook-html/src/components/progression/progression.html
+++ b/packages/storybook-html/src/components/progression/progression.html
@@ -1,6 +1,6 @@
 <div class="uidf-progression-wrapper">
     <ul class="progression">
-        <li class="progression__step">
+        <li class="progression__step is-complete">
             <div class="progression__step-marker">
                 <a class="progression__link" href="#">
                     <span class="progression__step-number">1</span>
